test/unit-tests/errors/temporary-branch-fix.spec.d.ts
export declare class TempTests {
    private _setErrorMessage;
    testErrors(error: string, className: string): void;
}
